--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Shopify Business Blueprint</title><style>
+<html><head><link rel="icon" type="image/x-icon" href="https://image.pngaaa.com/385/1265385-middle.png"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Shopify Business Blueprint</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
