--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><link rel="icon" type="image/x-icon" href="https://image.pngaaa.com/385/1265385-middle.png"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Shopify Business Blueprint</title><style>
+<html><head><link rel="icon" type="image/x-icon" href="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/614daf1b-e0b4-4695-99eb-ad2eb245e561/pngaaa.com-1265385.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20220521%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20220521T133435Z&X-Amz-Expires=86400&X-Amz-Signature=e77130a2709be4fe1fac2bb7bced4c968e978bfd4b6e17c661a2043e57ee9b93&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22pngaaa.com-1265385.png%22&x-id=GetObject"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Shopify Business Blueprint</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
